--- a/flex/04-flex-information/index.html
+++ b/flex/04-flex-information/index.html
@@ -9,18 +9,28 @@
   </head>
   <body>
     <div class="title">Information!</div>
-
+    
+    <div class="info">
+    <div class="box-1">
     <img src="./images/barberry.png" alt="barberry">
     <div class="text">This is a type of plant. We love this one.</div>
+    </div>
 
+    <div class="box-2">
     <img src="./images/chilli.png" alt="chili">
     <div class="text">This is another type of plant. Isn't it nice</div>
+    </div>
 
+    <div class="box-3">
     <img src="./images/pepper.png" alt="pepper">
     <div class="text">We have so many plants. Yay plants.</div>
+    </div>
 
+    <div class="box-4">
     <img src="./images/saffron.png" alt="saffron">
     <div class="text">I'm running out of things to say about plants.</div>
+    </div>
+    </div>
 
     <!-- disregard this section, it's here to give attribution to the creator of these icons -->
     <div class="footer">
